[tool.poetry]
name = "brainstation"
version = "0.1.0"
description = ""
authors = ["tim frazer <tim@littlebigthings.co>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.0.16"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
